# uvicorn-gunicorn-readyapi-docker

./: .pre-commit-config.yaml  .pre-commit-config.yaml.bak  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: deploy.yml  issue-manager.yml  labeler.yml  latest-changes.yml  test.yml
docker-images/: python3.10-slim.dockerfile  python3.10.dockerfile  python3.11-slim.dockerfile  python3.11.dockerfile  python3.7-alpine3.8.dockerfile  python3.7.dockerfile  python3.8-alpine3.10.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  python3.9-alpine3.14.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements-legacy.txt  requirements.txt
docker-images/app/: main.py
scripts/: build-push.sh  build.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py
tests/test_02_security/: __init__.py  test_security.py
